# vps_stats

./: .env.exemple  .gitignore  Cargo.toml  README.md  Rocket.toml
assets/: data_flow.d2  database_schema.d2  sequence_diagram.d2  system_architecture.d2
migrations/2025-03-03-140200_create_tables/: down.sql  up.sql
src/: api_response.rs  config.rs  cors.rs  lib.rs  logger.rs  main.rs  models.rs  paginated.rs  request_logger.rs  schema.rs  sql_functions.rs
src/models/: city.rs  collector.rs  event.rs  mod.rs  session.rs  summary.rs
src/routes/: city.rs  collector.rs  event.rs  events.rs  mod.rs  session.rs  summary.rs
src/services/: ip_location.rs  mod.rs
ui/: index.html  script.js
