[package]
name = "website_stats"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
regex = "1.10"
url = "2.5"
ulid = "1.1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
